--- a/template/package.json
+++ b/template/package.json
@@ -4,13 +4,39 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development node build/addon/server-watch.js & nodemon --exec yarn babel-node server/app.js"
+    "babel-node": "babel-node",
+    "start": "cross-env NODE_ENV=development node build/server-watch.js & nodemon --exec yarn babel-node src/app.js",
+    "deploy": "cross-env NODE_ENV=production node build/server-route.js & pm2 start src/app.js --interpreter ./node_modules/.bin/babel-node --name \"koa2\" --max-memory-restart 400M"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "cross-env": "^5.1.1"
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "cross-env": "^5.1.1",
+    "koa": "^2.3.0",
+    "koa-router": "^7.2.1",
+    "module-alias": "^2.0.2",
+    "mongoose": "^4.12.5",
+    "pm2": "^2.7.2"
   },
   "devDependencies": {
-    "nodemon": "^1.12.1"
+    "chokidar": "^1.7.0",
+    "mkdirp": "^0.5.1",
+    "nodemon": "^1.12.1",
+    "readline": "^1.3.0",
+    "shelljs": "^0.7.8"
+  },
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
+  },
+  "_moduleAliases": {
+    "server": "./src/",
+    "config": "./src/config.js",
+    "db": "./src/db.js",
+    "models": "./src/models/",
+    "schemas": "./src/schemas/",
+    "controllers": "./src/controllers/",
+    "services": "./src/services/"
   }
 }
