--- a/template/package.json
+++ b/template/package.json
@@ -12,6 +12,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "colors": "^1.1.2",
     "cross-env": "^5.1.1",
     "koa": "^2.3.0",
     "koa-router": "^7.2.1",
