--- a/template/package.json
+++ b/template/package.json
@@ -17,8 +17,10 @@
     "bluebird": "^3.5.1",
     "colors": "^1.1.2",
     "cross-env": "^5.1.1",
+    "ejs": "^2.5.7",
     "koa": "^2.3.0",
     "koa-router": "^7.2.1",
+    "koa-views": "^6.1.1",
     "koa-websocket": "^4.0.0",
     "module-alias": "^2.0.2",
     "mongoose": "^4.12.5",
