--- a/template/package.json
+++ b/template/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "address": "^1.0.3",
     "babel-cli": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "bluebird": "^3.5.1",
@@ -25,7 +26,8 @@
     "koa-websocket": "^4.0.0",
     "module-alias": "^2.0.2",
     "mongoose": "^4.12.5",
-    "pm2": "^2.7.2"
+    "pm2": "^2.7.2",
+    "query-string": "^5.0.1"
   },
   "devDependencies": {
     "chokidar": "^1.7.0",
