--- a/template/package.json
+++ b/template/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development node build/server-watch.js & nodemon --exec babel-node src/app.js",
-    "deploy": "cross-env NODE_ENV=production node build/server-route.js & pm2 start src/app.js --interpreter ./node_modules/.bin/babel-node --name \"koa2\" --max-memory-restart 400M",
+    "start": "cross-env NODE_ENV=development nodemon --exec babel-node src/app.js",
+    "deploy": "cross-env NODE_ENV=production pm2 start src/app.js --interpreter ./node_modules/.bin/babel-node --name \"koa2Starter\" --max-memory-restart 400M",
     "socket": "cross-env NODE_ENV=develoment nodemon --exec yarn babel-node src/socket.js"
   },
   "dependencies": {
@@ -20,12 +20,15 @@
     "ejs": "^2.5.7",
     "koa": "^2.3.0",
     "koa-body": "^2.5.0",
-    "koa-router": "^7.2.1",
+    "koa-compose": "^4.0.0",
+    "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
     "koa-views": "^6.1.1",
     "koa-websocket": "^4.0.0",
+    "lodash": "^4.17.4",
     "module-alias": "^2.0.2",
     "mongoose": "^4.12.5",
+    "path-to-regexp": "^2.1.0",
     "pm2": "^2.7.2",
     "query-string": "^5.0.1"
   },
