--- a/template/package.json
+++ b/template/package.json
@@ -43,9 +43,9 @@
     "npm": ">=5.0.0"
   },
   "_moduleAliases": {
-    "config": "./src/config.js",
+    "config": "./src/config",
     "models": "./src/models/",
-    "cache": "./src/cache.js",
+    "utils": "./src/utils/",
     "schemas": "./src/schemas/",
     "controllers": "./src/controllers/",
     "business": "./src/business/"
