--- a/template/package.json
+++ b/template/package.json
@@ -20,6 +20,7 @@
     "ejs": "^2.5.7",
     "koa": "^2.3.0",
     "koa-body": "^2.5.0",
+    "koa-log4": "^2.3.0",
     "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
     "koa-views": "^6.1.1",
