--- a/template/package.json
+++ b/template/package.json
@@ -15,9 +15,11 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "bluebird": "^3.5.1",
+    "blueimp-md5": "^2.10.0",
     "colors": "^1.1.2",
     "cross-env": "^5.1.1",
     "ejs": "^2.5.7",
+    "jwt-simple": "^0.5.1",
     "koa": "^2.3.0",
     "koa-body": "^2.5.0",
     "koa-log4": "^2.3.0",
