--- a/template/package.json
+++ b/template/package.json
@@ -4,9 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development node build/server-watch.js & nodemon --exec babel-node src/app.js",
-    "deploy": "cross-env NODE_ENV=production pm2 start src/app.js --interpreter ./node_modules/.bin/babel-node --name \"koa2Starter\" --max-memory-restart 400M",
-    "socket": "cross-env NODE_ENV=develoment nodemon --exec yarn babel-node src/socket.js"
+    "start": "cross-env NODE_ENV=development node build/server-watch.js & nodemon --inspect src/main.js",
+    "deploy": "cross-env NODE_ENV=production pm2 start src/main.js --name \"koa2Starter\" --max-memory-restart 400M"
   },
   "dependencies": {
     "address": "^1.0.3",
@@ -14,6 +13,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
     "bluebird": "^3.5.1",
     "blueimp-md5": "^2.10.0",
     "colors": "^1.1.2",
