--- a/template/package.json
+++ b/template/package.json
@@ -4,11 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development node build/server-watch.js & nodemon --inspect src/main.js",
+    "start": "cross-env NODE_ENV=development node build/server-watch.js & nodemon --inspect src/main.js --exec \"eslint ./src/controllers && node\"",
     "deploy": "cross-env NODE_ENV=production pm2 start src/main.js --name \"koa2Starter\" --max-memory-restart 400M"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.1",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
@@ -35,6 +36,7 @@
     "address": "^1.0.3",
     "chokidar": "^1.7.0",
     "cross-env": "^5.1.1",
+    "eslint": "^4.16.0",
     "mkdirp": "^0.5.1",
     "nodemon": "^1.12.1",
     "readline": "^1.3.0",
