--- a/template/package.json
+++ b/template/package.json
@@ -29,6 +29,7 @@
     "lodash": "^4.17.4",
     "module-alias": "^2.0.2",
     "mongoose": "^4.12.5",
+    "node-schedule": "^1.3.0",
     "pm2": "^2.7.2",
     "redis": "^2.8.0"
   },
